--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,4 +18,13 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="22dp"/>
 
+    <DigitalClock
+        android:id="@+id/digitalClock1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/analogClock1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="81dp"
+        android:text="DigitalClock"/>
+
 </RelativeLayout>
